# DetectAndTrackInCPlus

./: .gitignore  CMakeLists.txt  README.md  detectAndTrack.cpp  detectAndTrack.h  inference.cpp  libExport.cpp  libExport.h  main.cpp  stopthread.h  test_track.cpp
Detect/: detectAndTrack.cpp  inference.cpp  inference.h
Track/: BYTETracker.cpp  BYTETracker.h  STrack.cpp  STrack.h
tools/: convert_yolov8.py
